--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     footer {background:#333;color:#fff;padding:20px;text-align:center;}
     footer a {color:#2ecc71;margin:0 10px;text-decoration:none;}
   </style>
+
+  <!-- ✅ Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PSW1MY7HB4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PSW1MY7HB4'); 
+  </script>
 </head>
 <body>
 
