--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VDN6YH4JRZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VDN6YH4JRZ');
+</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FitPro App</title>
@@ -16,15 +24,6 @@
     footer {background:#333;color:#fff;padding:20px;text-align:center;}
     footer a {color:#2ecc71;margin:0 10px;text-decoration:none;}
   </style>
-
-  <!-- ✅ Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PSW1MY7HB4"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-PSW1MY7HB4'); 
-  </script>
 </head>
 <body>
 
@@ -66,4 +65,6 @@
 
 </body>
 </html>
+
+
 
