--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-VDN6YH4JRZ'{ 'debug_mode':true });
+  gtag('config', 'G-VDN6YH4JRZ', { 'debug_mode': true });
 </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -65,6 +65,7 @@
 
 </body>
 </html>
+
 
 
 
